# correspondent

./: Cargo.toml  README.md
.github/workflows/: rust.yml
correspondent/: Cargo.toml  README.md
correspondent-ffi/: Cargo.toml  cbindgen.toml
correspondent-ffi/src/: application.rs  certificate.rs  lib.rs  socket.rs  stream.rs
correspondent/examples/: chat.rs  debug-cert.pem
correspondent/src/: application.rs  lib.rs  peer.rs  socket.rs  socket_builder.rs  util.rs
correspondent/src/nsd/: mod.rs
correspondent/src/nsd/linux/: avahi.rs  mod.rs
correspondent/src/nsd/windows/: bindings.rs  browse.rs  mod.rs  register.rs
sea-level/: Cargo.toml
sea-level/examples/: chat.rs  debug-cert.pk8
sea-level/src/: application.rs  lib.rs  socket.rs  util.rs
sea-level/src/nsd/: mod.rs
sea-level/src/nsd/linux/: avahi_entry_group.rs  avahi_service_browser.rs  avahi_service_resolver.rs  mod.rs
