[package]
name = "correspondent-ffi"
version = "0.3.0-dev0"
edition = "2018"
publish = false
license = "Apache-2.0 OR MIT OR Zlib"

[lib]
name = "correspondent"
crate-type = ["cdylib"]

[dependencies]
correspondent = { path = "../correspondent" }
futures-util = "0.3"
quinn = "0.8.4"
rcgen = { version = "0.9.3", features = ["pem", "x509-parser"] }
tokio = { version = "1.20.1", features = ["full"] }
