[package]
name = "correspondent-ffi"
version = "0.4.0-dev0"
edition = "2018"
publish = false
license = "Apache-2.0 OR MIT OR Zlib"

[lib]
name = "correspondent"
crate-type = ["cdylib"]

[dependencies]
correspondent = { path = "../correspondent" }
futures-util = "0.3"
quinn = "0.10.2"
rcgen = { version = "0.13.0", features = ["pem", "x509-parser"] }
tokio = { version = "1.20.1", features = ["full"] }
