[package]
name = "correspondent"
version = "0.4.0-dev0"
edition = "2018"
description = "non-hierarchical networking library"
homepage = "https://github.com/geeklint/correspondent"
repository = "https://github.com/geeklint/correspondent"
readme = "README.md"
keywords = ["network-programming"]
license = "Apache-2.0 OR MIT OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", features = ["channel"] }
pem = "3.0.3"
quinn = { version = "0.8.4", default-features = false, features = ["tls-rustls"] }
rand = "0.8"
rcgen = { version = "0.9.3", features = ["pem", "x509-parser"] }
rustls = "0.20.6"
rustls-pemfile = "2.1.1"
socket2 = "0.4.6"
time = "0.3.14"
tokio = { version = "1.0", features = ["full"] }
webpki = "0.22"
x509-parser = "0.16.0"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"
dbus-tokio = "0.7"

[target.'cfg(windows)'.dependencies]
windows = "0.18.0"
gethostname = "0.2.1"
