[package]
name = "correspondent"
version = "0.4.0-dev0"
edition = "2018"
description = "non-hierarchical networking library"
homepage = "https://github.com/geeklint/correspondent"
repository = "https://github.com/geeklint/correspondent"
readme = "README.md"
keywords = ["network-programming"]
license = "Apache-2.0 OR MIT OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.30", features = ["channel"] }
pem = "3.0.3"
quinn = { version = "0.10.2", default-features = false, features = ["tls-rustls", "runtime-tokio"] }
rand = "0.8.5"
rcgen = { version = "0.13.0", features = ["pem", "x509-parser"] }
rustls = "0.21.10"
rustls-pemfile = "2.1.1"
socket2 = "0.5.6"
time = "0.3.14"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
webpki = "0.22"
x509-parser = "0.16.0"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"
dbus-tokio = "0.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = [
    "Win32_NetworkManagement_Dns",
]}
gethostname = "0.4.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }