[package]
name = "sea-level"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dbus = "0.9"
dbus-tokio = "0.7"
futures-util = "0.3"
quinn = "0.7"
rand = "0.8"
rcgen = { version = "0.8.6", features = ["pem", "x509-parser"] }
rustls = "0.19"
tokio = { version = "1.0", features = ["full"] }
webpki = "0.21"
